python/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    TEXT
    END_SPLIT
    AMP
    ROUND
    BEGIN
    LIMITS
    BEGIN_EQUATION
    DISPLAYSTYLE
    TRUNC
    END
    CARD
    END_EQUATION
    MATHCLAP
    LENGTH
    QUAD
    BEGIN_SPLIT

Grammar

Rule 0     S' -> LP
Rule 1     LP -> Objective
Rule 2     LP -> Objective Constraints
Rule 3     LP -> Objective BACKSLASHES Constraints
Rule 4     LP -> error BACKSLASHES
Rule 5     Objective -> MAXIMIZE LinearExpression
Rule 6     Objective -> MINIMIZE LinearExpression
Rule 7     Objective -> MAXIMIZE LinearExpression COMMA IndexingExpression
Rule 8     Objective -> MINIMIZE LinearExpression COMMA IndexingExpression
Rule 9     Constraints -> SUBJECTTO ConstraintList
Rule 10    Constraints -> SUBJECTTO ConstraintList BACKSLASHES
Rule 11    ConstraintList -> ConstraintList BACKSLASHES Constraint
Rule 12    ConstraintList -> ConstraintList BACKSLASHES
Rule 13    ConstraintList -> Constraint
Rule 14    ConstraintList -> error BACKSLASHES
Rule 15    Constraint -> ConstraintExpression FOR IndexingExpression
Rule 16    Constraint -> ConstraintExpression COMMA IndexingExpression
Rule 17    Constraint -> ConstraintExpression
Rule 18    Constraint -> error FOR
Rule 19    Constraint -> error COMMA
Rule 20    ConstraintExpression -> LinearExpression EQ LinearExpression
Rule 21    ConstraintExpression -> LinearExpression LE LinearExpression
Rule 22    ConstraintExpression -> LinearExpression GE LinearExpression
Rule 23    ConstraintExpression -> LBRACKET NumericExpression RBRACKET LE LinearExpression LE NumericExpression
Rule 24    ConstraintExpression -> LBRACKET NumericExpression RBRACKET GE LinearExpression GE NumericExpression
Rule 25    ConstraintExpression -> error EQ
Rule 26    ConstraintExpression -> error LE
Rule 27    ConstraintExpression -> error GE
Rule 28    LinearExpression -> Variable
Rule 29    LinearExpression -> NUMBER
Rule 30    LinearExpression -> PLUS LinearExpression
Rule 31    LinearExpression -> MINUS LinearExpression
Rule 32    LinearExpression -> LPAREN LinearExpression RPAREN
Rule 33    LinearExpression -> LPAREN error RPAREN
Rule 34    LinearExpression -> LinearExpression PLUS LinearExpression
Rule 35    LinearExpression -> LinearExpression MINUS LinearExpression
Rule 36    LinearExpression -> LBRACKET NumericExpression RBRACKET TIMES LinearExpression
Rule 37    LinearExpression -> LinearExpression TIMES NumericExpression
Rule 38    LinearExpression -> LinearExpression DIVIDE NumericExpression
Rule 39    LinearExpression -> error PLUS
Rule 40    LinearExpression -> error MINUS
Rule 41    LinearExpression -> error TIMES
Rule 42    LinearExpression -> error DIVIDE
Rule 43    LinearExpression -> SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
Rule 44    LinearExpression -> SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
Rule 45    LinearExpression -> SUM UNDERLINE LBRACE error RBRACE
Rule 46    NumericExpression -> NumericExpression PLUS NumericExpression
Rule 47    NumericExpression -> NumericExpression MINUS NumericExpression
Rule 48    NumericExpression -> NumericExpression TIMES NumericExpression
Rule 49    NumericExpression -> NumericExpression DIVIDE NumericExpression
Rule 50    NumericExpression -> NumericExpression MOD NumericExpression
Rule 51    NumericExpression -> NumericExpression CARET NumericExpression
Rule 52    NumericExpression -> error PLUS
Rule 53    NumericExpression -> error MINUS
Rule 54    NumericExpression -> error TIMES
Rule 55    NumericExpression -> error DIVIDE
Rule 56    NumericExpression -> error MOD
Rule 57    NumericExpression -> error CARET
Rule 58    NumericExpression -> NumericOperator UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE NumericExpression
Rule 59    NumericExpression -> NumericOperator UNDERLINE LBRACE IndexingExpression RBRACE NumericExpression
Rule 60    NumericExpression -> NumericOperator UNDERLINE LBRACE error RBRACE
Rule 61    NumericExpression -> MINUS NumericExpression
Rule 62    NumericExpression -> PLUS NumericExpression
Rule 63    NumericExpression -> LPAREN NumericExpression RPAREN
Rule 64    NumericExpression -> Variable
Rule 65    NumericExpression -> NUMBER
Rule 66    NumericExpression -> LPAREN error RPAREN
Rule 67    NumericOperator -> SUM
Rule 68    NumericOperator -> PROD
Rule 69    NumericOperator -> MAX
Rule 70    NumericOperator -> MIN
Rule 71    NumericExpression -> SQRT LBRACE NumericExpression RBRACE
Rule 72    NumericExpression -> LFLOOR NumericExpression RFLOOR
Rule 73    NumericExpression -> LCEIL NumericExpression RCEIL
Rule 74    NumericExpression -> PIPE NumericExpression PIPE
Rule 75    NumericExpression -> MAX LPAREN NumericExpression RPAREN
Rule 76    NumericExpression -> MIN LPAREN NumericExpression RPAREN
Rule 77    NumericExpression -> SIN LPAREN NumericExpression RPAREN
Rule 78    NumericExpression -> COS LPAREN NumericExpression RPAREN
Rule 79    NumericExpression -> LOG LPAREN NumericExpression RPAREN
Rule 80    NumericExpression -> LN LPAREN NumericExpression RPAREN
Rule 81    NumericExpression -> EXP LPAREN NumericExpression RPAREN
Rule 82    NumericExpression -> ARCTAN LPAREN NumericExpression RPAREN
Rule 83    NumericExpression -> SQRT LBRACE error RBRACE
Rule 84    NumericExpression -> LFLOOR error RFLOOR
Rule 85    NumericExpression -> LCEIL error RCEIL
Rule 86    IndexingExpression -> EntryIndexingExpression
Rule 87    IndexingExpression -> IndexingExpression COLON LogicalExpression
Rule 88    IndexingExpression -> IndexingExpression COMMA EntryIndexingExpression
Rule 89    IndexingExpression -> IndexingExpression COMMA BACKSLASHES EntryIndexingExpression
Rule 90    IndexingExpression -> error COMMA
Rule 91    EntryIndexingExpression -> ValueList IN SetExpression
Rule 92    EntryIndexingExpression -> TupleList IN SetExpression
Rule 93    EntryIndexingExpression -> Variable IN SetExpression
Rule 94    EntryIndexingExpression -> error IN
Rule 95    EntryIndexingExpression -> error COLON
Rule 96    EntryIndexingExpression -> Variable EQ NUMBER
Rule 97    EntryIndexingExpression -> Variable EQ Variable
Rule 98    EntryIndexingExpression -> Variable EQ Range
Rule 99    EntryIndexingExpression -> Variable NEQ NumericExpression
Rule 100   EntryIndexingExpression -> Variable LE NumericExpression
Rule 101   EntryIndexingExpression -> Variable GE NumericExpression
Rule 102   EntryIndexingExpression -> Variable LT NumericExpression
Rule 103   EntryIndexingExpression -> Variable GT NumericExpression
Rule 104   EntryIndexingExpression -> error EQ
Rule 105   EntryIndexingExpression -> error NEQ
Rule 106   EntryIndexingExpression -> error LE
Rule 107   EntryIndexingExpression -> error GE
Rule 108   EntryIndexingExpression -> error LT
Rule 109   EntryIndexingExpression -> error GT
Rule 110   LogicalExpression -> EntryLogicalExpression
Rule 111   LogicalExpression -> LogicalExpression OR EntryLogicalExpression
Rule 112   LogicalExpression -> LogicalExpression AND EntryLogicalExpression
Rule 113   EntryLogicalExpression -> NOT EntryLogicalExpression
Rule 114   EntryLogicalExpression -> LPAREN LogicalExpression RPAREN
Rule 115   EntryLogicalExpression -> NumericExpression LT NumericExpression
Rule 116   EntryLogicalExpression -> NumericExpression LE NumericExpression
Rule 117   EntryLogicalExpression -> NumericExpression EQ NumericExpression
Rule 118   EntryLogicalExpression -> NumericExpression GE NumericExpression
Rule 119   EntryLogicalExpression -> NumericExpression NEQ NumericExpression
Rule 120   EntryLogicalExpression -> ValueList IN SetExpression
Rule 121   EntryLogicalExpression -> TupleList IN SetExpression
Rule 122   EntryLogicalExpression -> Variable IN SetExpression
Rule 123   EntryLogicalExpression -> ValueList NOTIN SetExpression
Rule 124   EntryLogicalExpression -> TupleList NOTIN SetExpression
Rule 125   EntryLogicalExpression -> Variable NOTIN SetExpression
Rule 126   EntryLogicalExpression -> SetExpression SUBSET SetExpression
Rule 127   EntryLogicalExpression -> SetExpression NOTSUBSET SetExpression
Rule 128   EntryLogicalExpression -> FORALL LBRACE IndexingExpression RBRACE LogicalExpression
Rule 129   EntryLogicalExpression -> EXISTS LBRACE IndexingExpression RBRACE LogicalExpression
Rule 130   SetExpression -> SetExpression DIFF SetExpression
Rule 131   SetExpression -> SetExpression SYMDIFF SetExpression
Rule 132   SetExpression -> SetExpression UNION SetExpression
Rule 133   SetExpression -> SetExpression INTER SetExpression
Rule 134   SetExpression -> SetExpression CROSS SetExpression
Rule 135   SetExpression -> error DIFF
Rule 136   SetExpression -> error SYMDIFF
Rule 137   SetExpression -> error UNION
Rule 138   SetExpression -> error INTER
Rule 139   SetExpression -> error CROSS
Rule 140   SetExpression -> LBRACE ValueList RBRACE
Rule 141   SetExpression -> LBRACE Range RBRACE
Rule 142   SetExpression -> Range
Rule 143   SetExpression -> Variable
Rule 144   SetExpression -> NATURALSET
Rule 145   SetExpression -> INTEGERSET
Rule 146   SetExpression -> REALSET
Rule 147   SetExpression -> LBRACE error RBRACE
Rule 148   SetExpression -> Variable LPAREN ValueList RPAREN
Rule 149   SetExpression -> Variable LBRACE ValueList RBRACE
Rule 150   SetExpression -> Variable LBRACE Variable RBRACE
Rule 151   SetExpression -> Variable LPAREN Variable RPAREN
Rule 152   SetExpression -> error LBRACE
Rule 153   SetExpression -> error LPAREN
Rule 154   Range -> Variable DOTS NumericExpression
Rule 155   Range -> NUMBER DOTS NumericExpression
Rule 156   Range -> error DOTS
Rule 157   Range -> error COMMA
Rule 158   Variable -> ID UNDERLINE LBRACE ValueList RBRACE
Rule 159   Variable -> ID UNDERLINE LBRACE Variable RBRACE
Rule 160   Variable -> ID UNDERLINE LBRACE NUMBER RBRACE
Rule 161   Variable -> ID
Rule 162   ValueList -> NUMBER COMMA NUMBER
Rule 163   ValueList -> Variable COMMA Variable
Rule 164   ValueList -> NUMBER COMMA Variable
Rule 165   ValueList -> Variable COMMA NUMBER
Rule 166   ValueList -> ValueList COMMA NUMBER
Rule 167   ValueList -> ValueList COMMA Variable
Rule 168   ValueList -> error COMMA
Rule 169   TupleList -> LPAREN ValueList RPAREN
Rule 170   ValueList -> error RPAREN

Terminals, with rules where they appear

AMP                  : 
AND                  : 112
ARCTAN               : 82
BACKSLASHES          : 3 4 10 11 12 14 89
BEGIN                : 
BEGIN_EQUATION       : 
BEGIN_SPLIT          : 
CARD                 : 
CARET                : 43 51 57 58
COLON                : 87 95
COMMA                : 7 8 16 19 88 89 90 157 162 163 164 165 166 167 168
COS                  : 78
CROSS                : 134 139
DIFF                 : 130 135
DISPLAYSTYLE         : 
DIVIDE               : 38 42 49 55
DOTS                 : 154 155 156
END                  : 
END_EQUATION         : 
END_SPLIT            : 
EQ                   : 20 25 96 97 98 104 117
EXISTS               : 129
EXP                  : 81
FOR                  : 15 18
FORALL               : 128
GE                   : 22 24 24 27 101 107 118
GT                   : 103 109
ID                   : 158 159 160 161
IN                   : 91 92 93 94 120 121 122
INTEGERSET           : 145
INTER                : 133 138
LBRACE               : 43 43 44 45 58 58 59 60 71 83 128 129 140 141 147 149 150 152 158 159 160
LBRACKET             : 23 24 36
LCEIL                : 73 85
LE                   : 21 23 23 26 100 106 116
LENGTH               : 
LFLOOR               : 72 84
LIMITS               : 
LN                   : 80
LOG                  : 79
LPAREN               : 32 33 63 66 75 76 77 78 79 80 81 82 114 148 151 153 169
LT                   : 102 108 115
MATHCLAP             : 
MAX                  : 69 75
MAXIMIZE             : 5 7
MIN                  : 70 76
MINIMIZE             : 6 8
MINUS                : 31 35 40 47 53 61
MOD                  : 50 56
NATURALSET           : 144
NEQ                  : 99 105 119
NOT                  : 113
NOTIN                : 123 124 125
NOTSUBSET            : 127
NUMBER               : 29 65 96 155 160 162 162 164 165 166
OR                   : 111
PIPE                 : 74 74
PLUS                 : 30 34 39 46 52 62
PROD                 : 68
QUAD                 : 
RBRACE               : 43 43 44 45 58 58 59 60 71 83 128 129 140 141 147 149 150 158 159 160
RBRACKET             : 23 24 36
RCEIL                : 73 85
REALSET              : 146
RFLOOR               : 72 84
ROUND                : 
RPAREN               : 32 33 63 66 75 76 77 78 79 80 81 82 114 148 151 169 170
SIN                  : 77
SQRT                 : 71 83
SUBJECTTO            : 9 10
SUBSET               : 126
SUM                  : 43 44 45 67
SYMDIFF              : 131 136
TEXT                 : 
TIMES                : 36 37 41 48 54
TRUNC                : 
UNDERLINE            : 43 44 45 58 59 60 158 159 160
UNION                : 132 137
error                : 4 14 18 19 25 26 27 33 39 40 41 42 45 52 53 54 55 56 57 60 66 83 84 85 90 94 95 104 105 106 107 108 109 135 136 137 138 139 147 152 153 156 157 168 170

Nonterminals, with rules where they appear

Constraint           : 11 13
ConstraintExpression : 15 16 17
ConstraintList       : 9 10 11 12
Constraints          : 2 3
EntryIndexingExpression : 86 88 89
EntryLogicalExpression : 110 111 112 113
IndexingExpression   : 7 8 15 16 43 44 58 59 87 88 89 128 129
LP                   : 0
LinearExpression     : 5 6 7 8 20 20 21 21 22 22 23 24 30 31 32 34 34 35 35 36 37 38 43 44
LogicalExpression    : 87 111 112 114 128 129
NumericExpression    : 23 23 24 24 36 37 38 43 46 46 47 47 48 48 49 49 50 50 51 51 58 58 59 61 62 63 71 72 73 74 75 76 77 78 79 80 81 82 99 100 101 102 103 115 115 116 116 117 117 118 118 119 119 154 155
NumericOperator      : 58 59 60
Objective            : 1 2 3
Range                : 98 141 142
SetExpression        : 91 92 93 120 121 122 123 124 125 126 126 127 127 130 130 131 131 132 132 133 133 134 134
TupleList            : 92 121 124
ValueList            : 91 120 123 140 148 149 158 166 167 169
Variable             : 28 64 93 96 97 97 98 99 100 101 102 103 122 125 143 148 149 150 150 151 151 154 159 163 163 164 165 167

Parsing method: LALR

state 0

    (0) S' -> . LP
    (1) LP -> . Objective
    (2) LP -> . Objective Constraints
    (3) LP -> . Objective BACKSLASHES Constraints
    (4) LP -> . error BACKSLASHES
    (5) Objective -> . MAXIMIZE LinearExpression
    (6) Objective -> . MINIMIZE LinearExpression
    (7) Objective -> . MAXIMIZE LinearExpression COMMA IndexingExpression
    (8) Objective -> . MINIMIZE LinearExpression COMMA IndexingExpression

    error           shift and go to state 4
    MAXIMIZE        shift and go to state 3
    MINIMIZE        shift and go to state 2

    Objective                      shift and go to state 5
    LP                             shift and go to state 1

state 1

    (0) S' -> LP .



state 2

    (6) Objective -> MINIMIZE . LinearExpression
    (8) Objective -> MINIMIZE . LinearExpression COMMA IndexingExpression
    (28) LinearExpression -> . Variable
    (29) LinearExpression -> . NUMBER
    (30) LinearExpression -> . PLUS LinearExpression
    (31) LinearExpression -> . MINUS LinearExpression
    (32) LinearExpression -> . LPAREN LinearExpression RPAREN
    (33) LinearExpression -> . LPAREN error RPAREN
    (34) LinearExpression -> . LinearExpression PLUS LinearExpression
    (35) LinearExpression -> . LinearExpression MINUS LinearExpression
    (36) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (37) LinearExpression -> . LinearExpression TIMES NumericExpression
    (38) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (39) LinearExpression -> . error PLUS
    (40) LinearExpression -> . error MINUS
    (41) LinearExpression -> . error TIMES
    (42) LinearExpression -> . error DIVIDE
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (45) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (160) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (161) Variable -> . ID

    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    error           shift and go to state 15
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 12

state 3

    (5) Objective -> MAXIMIZE . LinearExpression
    (7) Objective -> MAXIMIZE . LinearExpression COMMA IndexingExpression
    (28) LinearExpression -> . Variable
    (29) LinearExpression -> . NUMBER
    (30) LinearExpression -> . PLUS LinearExpression
    (31) LinearExpression -> . MINUS LinearExpression
    (32) LinearExpression -> . LPAREN LinearExpression RPAREN
    (33) LinearExpression -> . LPAREN error RPAREN
    (34) LinearExpression -> . LinearExpression PLUS LinearExpression
    (35) LinearExpression -> . LinearExpression MINUS LinearExpression
    (36) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (37) LinearExpression -> . LinearExpression TIMES NumericExpression
    (38) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (39) LinearExpression -> . error PLUS
    (40) LinearExpression -> . error MINUS
    (41) LinearExpression -> . error TIMES
    (42) LinearExpression -> . error DIVIDE
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (45) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (160) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (161) Variable -> . ID

    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    error           shift and go to state 15
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 16

state 4

    (4) LP -> error . BACKSLASHES

    BACKSLASHES     shift and go to state 17


state 5

    (1) LP -> Objective .
    (2) LP -> Objective . Constraints
    (3) LP -> Objective . BACKSLASHES Constraints
    (9) Constraints -> . SUBJECTTO ConstraintList
    (10) Constraints -> . SUBJECTTO ConstraintList BACKSLASHES

    $end            reduce using rule 1 (LP -> Objective .)
    BACKSLASHES     shift and go to state 19
    SUBJECTTO       shift and go to state 18

    Constraints                    shift and go to state 20

state 6

    (43) LinearExpression -> SUM . UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (44) LinearExpression -> SUM . UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (45) LinearExpression -> SUM . UNDERLINE LBRACE error RBRACE

    UNDERLINE       shift and go to state 21


state 7

    (29) LinearExpression -> NUMBER .

    PLUS            reduce using rule 29 (LinearExpression -> NUMBER .)
    MINUS           reduce using rule 29 (LinearExpression -> NUMBER .)
    TIMES           reduce using rule 29 (LinearExpression -> NUMBER .)
    DIVIDE          reduce using rule 29 (LinearExpression -> NUMBER .)
    FOR             reduce using rule 29 (LinearExpression -> NUMBER .)
    COMMA           reduce using rule 29 (LinearExpression -> NUMBER .)
    BACKSLASHES     reduce using rule 29 (LinearExpression -> NUMBER .)
    $end            reduce using rule 29 (LinearExpression -> NUMBER .)
    SUBJECTTO       reduce using rule 29 (LinearExpression -> NUMBER .)
    RPAREN          reduce using rule 29 (LinearExpression -> NUMBER .)
    EQ              reduce using rule 29 (LinearExpression -> NUMBER .)
    LE              reduce using rule 29 (LinearExpression -> NUMBER .)
    GE              reduce using rule 29 (LinearExpression -> NUMBER .)


state 8

    (36) LinearExpression -> LBRACKET . NumericExpression RBRACKET TIMES LinearExpression
    (46) NumericExpression -> . NumericExpression PLUS NumericExpression
    (47) NumericExpression -> . NumericExpression MINUS NumericExpression
    (48) NumericExpression -> . NumericExpression TIMES NumericExpression
    (49) NumericExpression -> . NumericExpression DIVIDE NumericExpression
    (50) NumericExpression -> . NumericExpression MOD NumericExpression
    (51) NumericExpression -> . NumericExpression CARET NumericExpression
    (52) NumericExpression -> . error PLUS
    (53) NumericExpression -> . error MINUS
    (54) NumericExpression -> . error TIMES
    (55) NumericExpression -> . error DIVIDE
    (56) NumericExpression -> . error MOD
    (57) NumericExpression -> . error CARET
    (58) NumericExpression -> . NumericOperator UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE NumericExpression
    (59) NumericExpression -> . NumericOperator UNDERLINE LBRACE IndexingExpression RBRACE NumericExpression
    (60) NumericExpression -> . NumericOperator UNDERLINE LBRACE error RBRACE
    (61) NumericExpression -> . MINUS NumericExpression
    (62) NumericExpression -> . PLUS NumericExpression
    (63) NumericExpression -> . LPAREN NumericExpression RPAREN
    (64) NumericExpression -> . Variable
    (65) NumericExpression -> . NUMBER
    (66) NumericExpression -> . LPAREN error RPAREN
    (71) NumericExpression -> . SQRT LBRACE NumericExpression RBRACE
    (72) NumericExpression -> . LFLOOR NumericExpression RFLOOR
    (73) NumericExpression -> . LCEIL NumericExpression RCEIL
    (74) NumericExpression -> . PIPE NumericExpression PIPE
    (75) NumericExpression -> . MAX LPAREN NumericExpression RPAREN
    (76) NumericExpression -> . MIN LPAREN NumericExpression RPAREN
    (77) NumericExpression -> . SIN LPAREN NumericExpression RPAREN
    (78) NumericExpression -> . COS LPAREN NumericExpression RPAREN
    (79) NumericExpression -> . LOG LPAREN NumericExpression RPAREN
    (80) NumericExpression -> . LN LPAREN NumericExpression RPAREN
    (81) NumericExpression -> . EXP LPAREN NumericExpression RPAREN
    (82) NumericExpression -> . ARCTAN LPAREN NumericExpression RPAREN
    (83) NumericExpression -> . SQRT LBRACE error RBRACE
    (84) NumericExpression -> . LFLOOR error RFLOOR
    (85) NumericExpression -> . LCEIL error RCEIL
    (67) NumericOperator -> . SUM
    (68) NumericOperator -> . PROD
    (69) NumericOperator -> . MAX
    (70) NumericOperator -> . MIN
    (158) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (160) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (161) Variable -> . ID

    error           shift and go to state 41
    MINUS           shift and go to state 29
    PLUS            shift and go to state 34
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 27
    SQRT            shift and go to state 39
    LFLOOR          shift and go to state 22
    LCEIL           shift and go to state 36
    PIPE            shift and go to state 33
    MAX             shift and go to state 38
    MIN             shift and go to state 25
    SIN             shift and go to state 32
    COS             shift and go to state 31
    LOG             shift and go to state 23
    LN              shift and go to state 30
    EXP             shift and go to state 28
    ARCTAN          shift and go to state 40
    SUM             shift and go to state 26
    PROD            shift and go to state 42
    ID              shift and go to state 14

    NumericOperator                shift and go to state 24
    Variable                       shift and go to state 35
    NumericExpression              shift and go to state 43

state 9

    (31) LinearExpression -> MINUS . LinearExpression
    (28) LinearExpression -> . Variable
    (29) LinearExpression -> . NUMBER
    (30) LinearExpression -> . PLUS LinearExpression
    (31) LinearExpression -> . MINUS LinearExpression
    (32) LinearExpression -> . LPAREN LinearExpression RPAREN
    (33) LinearExpression -> . LPAREN error RPAREN
    (34) LinearExpression -> . LinearExpression PLUS LinearExpression
    (35) LinearExpression -> . LinearExpression MINUS LinearExpression
    (36) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (37) LinearExpression -> . LinearExpression TIMES NumericExpression
    (38) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (39) LinearExpression -> . error PLUS
    (40) LinearExpression -> . error MINUS
    (41) LinearExpression -> . error TIMES
    (42) LinearExpression -> . error DIVIDE
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (45) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (160) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (161) Variable -> . ID

    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    error           shift and go to state 15
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 44

state 10

    (28) LinearExpression -> Variable .

    PLUS            reduce using rule 28 (LinearExpression -> Variable .)
    MINUS           reduce using rule 28 (LinearExpression -> Variable .)
    TIMES           reduce using rule 28 (LinearExpression -> Variable .)
    DIVIDE          reduce using rule 28 (LinearExpression -> Variable .)
    FOR             reduce using rule 28 (LinearExpression -> Variable .)
    COMMA           reduce using rule 28 (LinearExpression -> Variable .)
    BACKSLASHES     reduce using rule 28 (LinearExpression -> Variable .)
    $end            reduce using rule 28 (LinearExpression -> Variable .)
    SUBJECTTO       reduce using rule 28 (LinearExpression -> Variable .)
    RPAREN          reduce using rule 28 (LinearExpression -> Variable .)
    EQ              reduce using rule 28 (LinearExpression -> Variable .)
    LE              reduce using rule 28 (LinearExpression -> Variable .)
    GE              reduce using rule 28 (LinearExpression -> Variable .)


state 11

    (30) LinearExpression -> PLUS . LinearExpression
    (28) LinearExpression -> . Variable
    (29) LinearExpression -> . NUMBER
    (30) LinearExpression -> . PLUS LinearExpression
    (31) LinearExpression -> . MINUS LinearExpression
    (32) LinearExpression -> . LPAREN LinearExpression RPAREN
    (33) LinearExpression -> . LPAREN error RPAREN
    (34) LinearExpression -> . LinearExpression PLUS LinearExpression
    (35) LinearExpression -> . LinearExpression MINUS LinearExpression
    (36) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (37) LinearExpression -> . LinearExpression TIMES NumericExpression
    (38) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (39) LinearExpression -> . error PLUS
    (40) LinearExpression -> . error MINUS
    (41) LinearExpression -> . error TIMES
    (42) LinearExpression -> . error DIVIDE
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (45) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (160) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (161) Variable -> . ID

    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    error           shift and go to state 15
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 45

state 12

    (6) Objective -> MINIMIZE LinearExpression .
    (8) Objective -> MINIMIZE LinearExpression . COMMA IndexingExpression
    (34) LinearExpression -> LinearExpression . PLUS LinearExpression
    (35) LinearExpression -> LinearExpression . MINUS LinearExpression
    (37) LinearExpression -> LinearExpression . TIMES NumericExpression
    (38) LinearExpression -> LinearExpression . DIVIDE NumericExpression

    BACKSLASHES     reduce using rule 6 (Objective -> MINIMIZE LinearExpression .)
    SUBJECTTO       reduce using rule 6 (Objective -> MINIMIZE LinearExpression .)
    $end            reduce using rule 6 (Objective -> MINIMIZE LinearExpression .)
    COMMA           shift and go to state 47
    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 50


state 13

    (32) LinearExpression -> LPAREN . LinearExpression RPAREN
    (33) LinearExpression -> LPAREN . error RPAREN
    (28) LinearExpression -> . Variable
    (29) LinearExpression -> . NUMBER
    (30) LinearExpression -> . PLUS LinearExpression
    (31) LinearExpression -> . MINUS LinearExpression
    (32) LinearExpression -> . LPAREN LinearExpression RPAREN
    (33) LinearExpression -> . LPAREN error RPAREN
    (34) LinearExpression -> . LinearExpression PLUS LinearExpression
    (35) LinearExpression -> . LinearExpression MINUS LinearExpression
    (36) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (37) LinearExpression -> . LinearExpression TIMES NumericExpression
    (38) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (39) LinearExpression -> . error PLUS
    (40) LinearExpression -> . error MINUS
    (41) LinearExpression -> . error TIMES
    (42) LinearExpression -> . error DIVIDE
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (45) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (160) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (161) Variable -> . ID

    error           shift and go to state 52
    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 51

state 14

    (158) Variable -> ID . UNDERLINE LBRACE ValueList RBRACE
    (159) Variable -> ID . UNDERLINE LBRACE Variable RBRACE
    (160) Variable -> ID . UNDERLINE LBRACE NUMBER RBRACE
    (161) Variable -> ID .
